src/test/ui/associated-const/associated-const-type-parameter-arrays-2.stderr
error[E0447]: type parameters can't appear within an array length expression
  --> $DIR/associated-const-type-parameter-arrays-2.rs:16:23
   |
LL |     let _array = [4; <A as Foo>::Y];
   |                       ^ type parameter

error: aborting due to previous error

For more information about this error, try `rustc --explain E0447`.
